--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ target
 # ===============================================
 # ------------ scala related ignores ------------
 # ... none so far
+logs/*.txt
 
 # ===============================================
 # ---------- data file related ignores ----------
